# diffusion-model-bootcamp

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
docs/prereads/: README.md
docs/slides/: README.md
docs/technical_onboarding/: README.md
implementations/tabular/: README.md
implementations/tabular/multi_table_synthesis/: ClavaDDPM.ipynb  README.md  gen_multi_report.py
implementations/tabular/multi_table_synthesis/eval/: eval_density.py  eval_mle.py
implementations/tabular/multi_table_synthesis/tab_ddpm/: gaussian_multinomial_diffsuion.py  logger.py  modules.py
implementations/tabular/single_table_synthesis/: embed_images.py  evaluate_synthetic_data.ipynb  tabddpm_implementation.ipynb  tabsyn_implementation.ipynb
implementations/tabular/single_table_synthesis/data_info/: default.json
implementations/tabular/single_table_synthesis/scripts/eval/mle/: tabular_dataload.py
implementations/tabular/single_table_synthesis/src/: __init__.py  util.py
implementations/tabular/single_table_synthesis/src/baselines/tabsyn/: main_train.py
implementations/time_series/csdi/: csdi_forecasting.ipynb  csdi_imputation.ipynb
implementations/time_series/csdi/dataset/: dataset_download.py  dataset_pm25.py
implementations/time_series/csdi/downloads/: download.py
implementations/time_series/tsdiff/: tsdiff_data_synthesis.ipynb  tsdiff_forecasting.ipynb
implementations/time_series/tsdiff/configs/: guidance.yaml  tstr.yaml
implementations/time_series/tsdiff/configs/train_tsdiff/: train_exchange.yaml  train_kdd_cup.yaml  train_missing_exchange.yaml  train_uber_tlc.yaml
implementations/time_series/tsdiff/src/uncond_ts_diff/sampler/: _base.py
reference_implementations/tabular/multi_table_synthesis/: .gitignore  complex_pipeline.py  pipeline_utils.py  report_utils.py
reference_implementations/tabular/multi_table_synthesis/eval/: eval_detection.py  eval_quality.py
reference_implementations/tabular/multi_table_synthesis/eval/mle/: mle.py  tabular_dataload.py  tabular_transformer.py
reference_implementations/tabular/multi_table_synthesis/lib/: env.py  util.py
reference_implementations/tabular/multi_table_synthesis/scripts/: utils_train.py
reference_implementations/tabular/single_table_synthesis/: tabddpm_implementation.ipynb  tabsyn_implementation.ipynb
reference_implementations/tabular/single_table_synthesis/.ipynb_checkpoints/: evaluate_synthetic_data-checkpoint.ipynb  tabddpm_implementation-checkpoint.ipynb  tabsyn_implementation-checkpoint.ipynb
reference_implementations/tabular/single_table_synthesis/scripts/: process_dataset.py
reference_implementations/tabular/single_table_synthesis/scripts/eval/: eval_dcr.py  eval_detection.py  eval_quality.py
reference_implementations/tabular/single_table_synthesis/scripts/eval/mle/: mle.py  tabular_dataload.py
reference_implementations/tabular/single_table_synthesis/src/: data.py
reference_implementations/tabular_reference_impelementation/ClavaDDPM/complex_data/ccs/: transaction.csv
reference_implementations/tabular_reference_impelementation/ClavaDDPM/complex_data/instacart_05/: order_products__train.csv  product.csv
reference_implementations/tabular_reference_impelementation/multi_table_synthesis/: ClavaDDPM.ipynb  gen_single_report.py  pipeline_modules.py  preprocess_utils.py
reference_implementations/tabular_reference_impelementation/multi_table_synthesis/eval/: eval_dcr.py
reference_implementations/tabular_reference_impelementation/multi_table_synthesis/eval/mle/: tabular_transformer.py
reference_implementations/tabular_reference_impelementation/multi_table_synthesis/lib/: __init__.py  data.py  metrics.py
reference_implementations/tabular_reference_impelementation/multi_table_synthesis/scripts/: train.py
reference_implementations/tabular_reference_impelementation/multi_table_synthesis/tab_ddpm/: gaussian_multinomial_diffsuion.py  resample.py  utils.py
reference_implementations/tabular_reference_impelementation/single_table_synthesis/: README.md  tabsyn_implementation.ipynb
reference_implementations/tabular_reference_impelementation/single_table_synthesis/scripts/: download_dataset.py  impute.py  main.py  process_dataset.py
reference_implementations/tabular_reference_impelementation/single_table_synthesis/scripts/eval/: eval_mle.py
reference_implementations/tabular_reference_impelementation/single_table_synthesis/src/: data.py  metrics.py
reference_implementations/time_series/csdi/: csdi_imputation.ipynb  diff_models.py
reference_implementations/time_series/csdi/.ipynb_checkpoints/: csdi_physio-checkpoint.ipynb
reference_implementations/time_series/csdi/dataset/: dataset_forecasting.py
reference_implementations/time_series/csdi/experiments/: exe_physio.py
reference_implementations/time_series/csdi/save/forecasting_electricity_20240730_010005/: config.json
reference_implementations/time_series/csdi/util/: utils.py
reference_implementations/time_series/tsdiff/: .gitignore  README.md  tsdiff_data_synthesis.ipynb  tsdiff_forecasting.ipynb
reference_implementations/time_series/tsdiff/configs/: refinement.yaml
reference_implementations/time_series/tsdiff/configs/train_tsdiff/: train_electricity.yaml  train_m4.yaml  train_missing_electricity.yaml  train_missing_kdd_cup.yaml  train_missing_solar.yaml  train_missing_traffic.yaml  train_missing_uber_tlc.yaml  train_solar.yaml  train_traffic.yaml  train_wiki.yaml
reference_implementations/time_series/tsdiff/src/uncond_ts_diff/: configs.py
reference_implementations/time_series_reference_impelementation/: README.md
reference_implementations/time_series_reference_impelementation/csdi/: README.md  csdi_forecasting.ipynb  main_model.py
reference_implementations/time_series_reference_impelementation/csdi/dataset/: dataset_physio.py
reference_implementations/time_series_reference_impelementation/csdi/experiments/: exe_forecasting.py  exe_pm25.py
reference_implementations/time_series_reference_impelementation/tsdiff/src/uncond_ts_diff/: dataset.py  utils.py
(+86 files in other folders)
